Added property smproperty for setting Java Security Manager